--- a/css/estilo.css
+++ b/css/estilo.css
@@ -111,3 +111,30 @@ ul li a:hover {
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
 }
+
+.linkme {
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.imaarques {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imaarques img {
+    margin: 0 auto;
+    width: 120px;
+    height: auto;
+}
+
+.desenvolvidopor {
+    color: white;
+    text-align: center;
+    margin: 0 auto;
+    letter-spacing: 1px;
+    font-size: 13px;
+    margin-right: 10px;
+}
